--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
                 <img src="/ramen.jpeg" alt="">
             </div>
             <div class="content">
-                <h2>Ramen</h2>
-                <p>O Melhor ramen da região, venha conhecer</p>
+                <div>
+                    <h2>Ramen</h2>
+                    <p>O Melhor ramen da região, venha conhecer</p>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -25,8 +27,10 @@
                 <img src="/ramen2.jpeg" alt="">
             </div>
             <div class="content">
-                <h2>Ramen 2</h2>
-                <p>O Melhor ramen da região, venha conhecer</p>
+                <div>
+                    <h2>Ramen 2</h2>
+                    <p>O Melhor ramen da região, venha conhecer</p>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -34,8 +38,11 @@
                 <img src="/sushi.jpeg" alt="">
             </div>
             <div class="content">
-                <h2>Sushi</h2>
-                <p>Pra você que gosta de sushi, os melhores estão aqui</p>
+                <div>
+                    <h2>Sushi</h2>
+                    <p>Pra você que gosta de sushi, os melhores estão aqui</p>
+                </div>
+
             </div>
         </div>
         <div class="card">
@@ -43,8 +50,10 @@
                 <img src="/pizza.jpeg" alt="">
             </div>
             <div class="content">
-                <h2>Pizza</h2>
-                <p>pizza de qualidade e bem recheada é com a gente, bora pedir uma</p>
+                <div>
+                    <h2>Pizza</h2>
+                    <p>pizza de qualidade e bem recheada é com a gente, bora pedir uma</p>
+                </div>
             </div>
         </div>
     </div>
